[package]
name = "rust-sak"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", optional = true, features = ["query", "json"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
tokio = { version = "1.52.3", features = ["time"], optional = true }

[features]
default = []
fetch = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "time", "test-util", "net", "io-util"] }
