[package]
name = "rust-sak"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["query", "json", "stream"], optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
tokio = { version = "1.52.3", features = ["time", "rt-multi-thread", "macros", "fs", "io-util", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "time", "test-util", "net", "io-util"] }

[features]
default = []
fetch = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:futures-util"]

[[bin]]
name = "playground"
path = "src/main.rs"
required-features = ["fetch"]
